[gd_scene load_steps=16 format=2]

[ext_resource path="res://_resources/fonts/BankGothic Md BT.ttf" type="FontFile" id=1]
[ext_resource path="res://_scripts/Container.gd" type="Script" id=2]
[ext_resource path="res://_resources/scene_duel/bar_normal.png" type="Texture2D" id=3]
[ext_resource path="res://_resources/scene_duel/icon_level.png" type="Texture2D" id=4]
[ext_resource path="res://_resources/scene_duel/icon_atk.png" type="Texture2D" id=5]
[ext_resource path="res://_resources/_attributes/light.png" type="Texture2D" id=6]
[ext_resource path="res://_resources/scene_duel/icon_def.png" type="Texture2D" id=7]
[ext_resource path="res://_resources/_types/fairy.png" type="Texture2D" id=8]
[ext_resource path="res://_resources/scene_duel/card_info_box.png" type="Texture2D" id=9]
[ext_resource path="res://_scripts/card_info_box.gd" type="Script" id=10]
[ext_resource path="res://_scripts/card_text.gd" type="Script" id=11]

[sub_resource type="FontFile" id=1]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=4]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=2]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="card_info_box" type="Sprite2D"]
position = Vector2( 0, 588 )
texture = ExtResource( 9 )
centered = false
script = ExtResource( 10 )

[node name="card_text_gd" type="Node" parent="."]
script = ExtResource( 11 )

[node name="colored_bar" type="Sprite2D" parent="."]
visible = false
position = Vector2( 640, 27 )
texture = ExtResource( 3 )

[node name="card_name" type="Control" parent="."]
offset_right = 200.0
offset_bottom = 55.0
custom_minimum_size = Vector2( 200, 0 )

[node name="card_name" type="Label" parent="card_name"]
offset_left = 8.0
offset_top = 5.0
offset_right = 395.0
offset_bottom = 50.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 1 )
text = "Card Name Here"

[node name="atk_def" type="Control" parent="."]
offset_left = 458.0
offset_right = 823.0
offset_bottom = 55.0
custom_minimum_size = Vector2( 365, 0 )

[node name="atk_indicator" type="Sprite2D" parent="atk_def"]
position = Vector2( 24, 27.5 )
scale = Vector2( 0.563, 0.563 )
texture = ExtResource( 5 )

[node name="icon_shadow" type="Sprite2D" parent="atk_def/atk_indicator"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="atk" type="Label" parent="atk_def"]
offset_left = 48.0
offset_top = 5.0
offset_right = 182.0
offset_bottom = 50.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 1 )
text = "9999"

[node name="def_indicator" type="Sprite2D" parent="atk_def"]
position = Vector2( 210, 27 )
scale = Vector2( 0.563, 0.563 )
texture = ExtResource( 7 )

[node name="icon_shadow" type="Sprite2D" parent="atk_def/def_indicator"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="def" type="Label" parent="atk_def"]
offset_left = 232.0
offset_top = 5.0
offset_right = 366.0
offset_bottom = 50.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 1 )
text = "9999"

[node name="extra_icons" type="Control" parent="."]
offset_left = 1065.0
offset_top = -1.0
offset_right = 1277.0
offset_bottom = 53.0
custom_minimum_size = Vector2( 212, 0 )

[node name="level_indicator" type="Sprite2D" parent="extra_icons"]
position = Vector2( 61.96, 28 )
scale = Vector2( 0.373, 0.373 )
texture = ExtResource( 4 )

[node name="icon_shadow" type="Sprite2D" parent="extra_icons/level_indicator"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 4.97095, 4.97156 )
texture = ExtResource( 4 )

[node name="level" type="Label" parent="extra_icons"]
offset_left = -28.0
offset_top = 6.0
offset_right = 32.0
offset_bottom = 51.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = SubResource( 1 )
text = "7"
align = 2

[node name="type_indicator" type="Sprite2D" parent="extra_icons"]
position = Vector2( 121, 28 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 8 )

[node name="icon_shadow" type="Sprite2D" parent="extra_icons/type_indicator"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 5, 5 )
texture = ExtResource( 8 )

[node name="attribute_indicator" type="Sprite2D" parent="extra_icons"]
position = Vector2( 178, 28 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 6 )

[node name="icon_shadow" type="Sprite2D" parent="extra_icons/attribute_indicator"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="card_text" type="Control" parent="."]
offset_top = 54.0
offset_right = 1280.0
offset_bottom = 132.0

[node name="toggle_img_txt" type="Button" parent="card_text"]
visible = false
offset_left = 1227.0
offset_top = -82.0
offset_right = 1278.0
offset_bottom = -56.0
focus_mode = 0
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = SubResource( 4 )
focus_mode = 0
text = "IMG"

[node name="Container" type="Container" parent="card_text"]
offset_right = 1280.0
offset_bottom = 78.0
script = ExtResource( 2 )

[node name="description_line1" type="Label" parent="card_text/Container"]
offset_left = 10.0
offset_top = 5.0
offset_right = 1273.0
offset_bottom = 72.0
theme_override_constants/line_spacing = 4
theme_override_fonts/font = SubResource( 2 )
text = "This card can count as [count-as-type] for some fusions."
autowrap = true

[node name="description_mouse_over" type="Button" parent="card_text/Container"]
offset_right = 12.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 1280, 77 )
focus_mode = 0
focus_mode = 0
flat = true

[node name="Container_images" type="Container" parent="card_text"]
visible = false
offset_right = 1280.0
offset_bottom = 78.0
script = ExtResource( 2 )

[node name="description_line1" type="RichTextLabel" parent="card_text/Container_images"]
offset_left = 10.0
offset_top = 5.0
offset_right = 1273.0
offset_bottom = 72.0
theme_override_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
text = "[img=26]res://_resources/_types/dragon.png[/img] can fuse with"
meta_underlined = false
text = " can fuse with"
scroll_active = false

[node name="description_mouse_over" type="Button" parent="card_text/Container_images"]
offset_right = 12.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 1280, 77 )
focus_mode = 0
focus_mode = 0
flat = true

[node name="text_scroll_timer" type="Timer" parent="card_text"]

[node name="description_tween" type="Tween" parent="card_text"]

[node name="interface_timer" type="Timer" parent="."]

[connection signal="button_up" from="card_text/toggle_img_txt" to="." method="_on_toggle_img_txt_button_up"]
[connection signal="mouse_entered" from="card_text/Container/description_mouse_over" to="." method="_on_description_mouse_over_mouse_entered"]
[connection signal="mouse_exited" from="card_text/Container/description_mouse_over" to="." method="_on_description_mouse_over_mouse_exited"]
[connection signal="mouse_entered" from="card_text/Container_images/description_mouse_over" to="." method="_on_description_mouse_over_mouse_entered"]
[connection signal="mouse_exited" from="card_text/Container_images/description_mouse_over" to="." method="_on_description_mouse_over_mouse_exited"]
